# socket-transfer-file

./: CMakeLists.txt  README.md  build.sh
data/: CMakeLists.txt
include/: Config.hpp  Network.hpp  Protocol.hpp  SHA256Util.hpp  Transfer.hpp
src/: Network.cpp  SHA256Util.cpp  Transfer.cpp  client.cpp  server.cpp
